refactor(matching): replace collect(Collectors.toList()) with toList()